# tg-slot-checker

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  settings.py  steps.yaml.example
app/: bot.py  notifier.py
app/steps/: builder.py  executor.py  loader.py  schemas.py
bot/: checker.py  executor.py  factory.py  notifier.py  steps.py
